--- a/QS.Core.Automation/ServiceLayer/Include/IServerTemplate.tt
+++ b/QS.Core.Automation/ServiceLayer/Include/IServerTemplate.tt
@@ -1,9 +1,10 @@
-﻿<#+
-// <copyright file="IServerTemplate.tt" company="Microsoft">
-//  Copyright © Microsoft. All Rights Reserved.
-// </copyright>
-
-public class IServerTemplate:CSharpTemplate
+﻿<#@ template language="C#" #>
+<#@ assembly name="System.Core" #>
+<#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Text" #>
+<#@ import namespace="System.Collections.Generic" #>
+<#+
+public class IServerTemplate
 {
     
         private T4ModelInfo _model;
@@ -20,7 +21,7 @@ get
 
 
 
-	public override string TransformText()
+	public string TransformText()
 	{
 		base.TransformText();
 #>
