--- a/QingShan.Core/CodeGenerator/Pages/Codegen.cshtml
+++ b/QingShan.Core/CodeGenerator/Pages/Codegen.cshtml
@@ -1,7 +1,4 @@
-﻿@page
-@{ Layout = "";}
-@attribute [Microsoft.AspNetCore.Authorization.AllowAnonymousAttribute]
-<!doctype html>
+﻿<!doctype html>
 <html lang="zh-CN">
   <head>
     <!-- 必须的 meta 标签 -->
