--- a/QingShan.Core/CodeGenerator/Templates/Controller.cshtml
+++ b/QingShan.Core/CodeGenerator/Templates/Controller.cshtml
@@ -1,14 +1,11 @@
-﻿@model TableConfig
-<pre>
+﻿//QS Code Generation Template 1.0
+//author:QS
+//blog:www.cnblogs.com/qs315
+//此代码由工具自动生成，请勿修改
+
 using System;
 using System.Collections.Generic;
 using System.Text;
-using Tibos.Domain;
-
-//EFX Code Generation Template 1.0
-//author:Tibos
-//blog:www.cnblogs.com/Tibos
-//Entity Code Generation Template
 namespace Tibos.Repository.@Model.DbName
 {
 	public partial class @Model.FullName:@(Model.DbName)Repository<@(Model.TableName)>
@@ -19,4 +16,3 @@ namespace Tibos.Repository.@Model.DbName
         }
 	}
 }
-</pre>
