--- a/QingShan.Core/CodeGenerator/Templates/IService.cshtml
+++ b/QingShan.Core/CodeGenerator/Templates/IService.cshtml
@@ -1,15 +1,11 @@
-﻿@model TableConfig
-<pre>
+﻿//QS Code Generation Template 1.0
+//author:QS
+//blog:www.cnblogs.com/qs315
+//此代码由工具自动生成，请勿修改
+
 using System;
 using System.Collections.Generic;
 using System.Text;
-using Tibos.Domain;
-using Tibos.IService;
-
-//EFX Code Generation Template 1.0
-//author:Tibos
-//blog:www.cnblogs.com/Tibos
-//Entity Code Generation Template
 namespace Tibos.IService.@Model.DbName
 {
 	public interface @Model.FullName:IBaseService<@(Model.TableName)>
@@ -18,4 +14,3 @@ namespace Tibos.IService.@Model.DbName
         
 	}
 }
-</pre>
