--- a/QingShan.Core/CodeGenerator/Templates/Model.cshtml
+++ b/QingShan.Core/CodeGenerator/Templates/Model.cshtml
@@ -1,10 +1,10 @@
-﻿@model TableConfig
-<pre>
-using System;
-//EFX Code Generation Template 1.0
-//author:Tibos
-//blog:www.cnblogs.com/Tibos
-//Entity Code Generation Template
+﻿using System;
+
+
+//QS Code Generation Template 1.0
+//author:QS
+//blog:www.cnblogs.com/qs315
+//此代码由工具自动生成，请勿修改
 namespace Tibos.Domain.@Model.DbName
 {
 	//@Model.FullName;
@@ -14,7 +14,7 @@ namespace Tibos.Domain.@Model.DbName
     {
         <text>
         /// <summary>
-		/// @Html.Raw(item.Remark)
+		/// item.Remark
         /// </summary>
         public virtual @item.CsType @item.PropName
         {
@@ -26,4 +26,3 @@ namespace Tibos.Domain.@Model.DbName
 
     }
 }
-</pre>
