--- a/QingShan.Core/CodeGenerator/Templates/Service.cshtml
+++ b/QingShan.Core/CodeGenerator/Templates/Service.cshtml
@@ -1,13 +1,13 @@
-﻿@model TableConfig
-<pre>
-using System;
+﻿using System;
 using System.Collections.Generic;
 using System.Linq.Expressions;
 using System.Text;
 using System.Threading.Tasks;
-using Tibos.Domain;
-using Tibos.IRepository;
-using Tibos.IService.Tibos;
+
+//QS Code Generation Template 1.0
+//author:QS
+//blog:www.cnblogs.com/qs315
+//此代码由工具自动生成，请勿修改
 
 namespace Tibos.Service.@Model.DbName
 {
@@ -20,4 +20,3 @@ namespace Tibos.Service.@Model.DbName
         }
     }
 }
-</pre>
