--- a/QingShan.Web/Pages/Codegen1.cshtml
+++ b/QingShan.Web/Pages/Codegen1.cshtml
@@ -22,85 +22,96 @@
         .container {
             max-width: 960px;
         }
-
     </style>
     <title>代码生成器</title>
 </head>
 <body class="bg-light">
 
     <div class="container">
-        <main>
-            <div class="py-5 text-center">
-                <h2>代码生成器</h2>
-                <p class="lead">请选择你要生成的项目.</p>
-            </div>
+        <form>
+            <main>
+                <div class="py-5 text-center">
+                    <h2>代码生成器</h2>
+                    <p class="lead">请选择你要生成的项目.</p>
+                </div>
 
-            <div class="row g-5">
-                <div class="col-md-5 col-lg-4 order-md-last">
-                    <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-primary">需要生成的项目</span>
-                        <span class="badge bg-primary rounded-pill">5</span>
-                    </h4>
-                    <div class="mb-3">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                            <label class="form-check-label" for="flexCheckDefault">
-                                控制器
-                            </label>
+                <div class="row g-5">
+                    <div class="col-md-5 col-lg-4 order-md-last">
+                        <h4 class="d-flex justify-content-between align-items-center mb-3">
+                            <span class="text-primary">需要生成的项目</span>
+                            <span class="badge bg-primary rounded-pill">5</span>
+                        </h4>
+                        <div class="mb-3">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    控制器
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                <label class="form-check-label" for="flexCheckChecked">
+                                    控制器
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
+                                <label class="form-check-label" for="flexCheckDefault">
+                                    控制器
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                <label class="form-check-label" for="flexCheckChecked">
+                                    控制器
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                <label class="form-check-label" for="flexCheckChecked">
+                                    控制器
+                                </label>
+                            </div>
                         </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                            <label class="form-check-label" for="flexCheckChecked">
-                                控制器
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                            <label class="form-check-label" for="flexCheckDefault">
-                                控制器
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                            <label class="form-check-label" for="flexCheckChecked">
-                                控制器
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                            <label class="form-check-label" for="flexCheckChecked">
-                                控制器
-                            </label>
+                    </div>
+                    <div class="col-md-7 col-lg-8">
+                        <h4 class="mb-3">配置</h4>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <label for="firstName" class="form-label">Controller命名空间</label>
+                                <input type="text" name="controllerNamespace" class="form-control" id="controllerNamespace" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    必填字段
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="lastName" class="form-label">Dto命名空间</label>
+                                <input type="text" name="dtoNamespace" class="form-control" id="lastName" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    必填字段
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="lastName" class="form-label">Service命名空间</label>
+                                <input type="text" name="serviceNamespace" class="form-control" id="lastName" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    必填字段
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="lastName" class="form-label">IContract命名空间</label>
+                                <input type="text" name="iContractNamespace" class="form-control" id="lastName" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    必填字段
+                                </div>
+                            </div>
+                            <hr class="my-4">
+                            <button class="w-100 btn btn-primary btn-lg" type="submit">生成代码</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7 col-lg-8">
-                    <h4 class="mb-3">配置</h4>
-                    <form class="needs-validation" novalidate>
-                        <div class="row g-3">
-                            <div class="col-sm-6">
-                                <label for="firstName" class="form-label">控制器命名空间</label>
-                                <input type="text" class="form-control" id="controllerNamespace" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid first name is required.
-                                </div>
-                            </div>
-
-                            <div class="col-sm-6">
-                                <label for="lastName" class="form-label">实体命名空间</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid last name is required.
-                                </div>
-                            </div>
-
-                        <hr class="my-4">
-
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">生成代码</button>
-                    </form>
-                </div>
-            </div>
-        </main>
+            </main>
+        </form>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <p class="mb-1">@@青杉</p>
