--- a/generator/QingShan.CodeGeneratorWeb/CodeGenerator/Templates/IContract.cshtml
+++ b/generator/QingShan.CodeGeneratorWeb/CodeGenerator/Templates/IContract.cshtml
@@ -6,7 +6,11 @@
 using System;
 using System.Collections.Generic;
 using System.Text;
-
+using @Model.ContractNamespace;
+using @Model.DtoNamespace;
+using @Model.EntityNamespace;
+using QingShan.Data;
+using System.Threading.Tasks;
 
 namespace @Model.Namespace
 {
@@ -15,6 +19,32 @@ namespace @Model.Namespace
     /// </summary>
 	public interface I@(Model.Name)Contract
 	{
+		/// <summary>
+        /// 获取数据
+        /// </summary>
+        /// <param name="dto"></param>
+        /// <returns></returns>
+        Task<PageOutputDto<@(Model.Name)OutputDto>> PageAsync(Page@(Model.Name)InputDto dto);
 
+        /// <summary>
+        /// 添加
+        /// </summary>
+        /// <param name="input"></param>
+        /// <returns></returns>
+        Task<StatusResult> AddAsync(@(Model.Name)InputDto input);
+
+        /// <summary>
+        /// 修改
+        /// </summary>
+        /// <param name="input"></param>
+        /// <returns></returns>
+        Task<StatusResult> UpdateAsync(@(Model.Name)InputDto input);
+
+        /// <summary>
+        /// 删除
+        /// </summary>
+        /// <param name="id"></param>
+        /// <returns></returns>
+        Task<StatusResult> DeleteAsync(string id);
 	}
 }
