--- a/generator/QingShan.CodeGeneratorWeb/CodeGenerator/Templates/Entity.cshtml
+++ b/generator/QingShan.CodeGeneratorWeb/CodeGenerator/Templates/Entity.cshtml
@@ -1,12 +1,14 @@
 ﻿using System;
 using QingShan.Data;
+using FreeSql.DataAnnotations;
 
 namespace @Model.Namespace
 {
     /// <summary>
 	/// @Model.Remark
     /// </summary>
-	public class @(Model.Name)Entity : QingShan.DatabaseAccessor.EntityBase
+	[Table(Name ="@(Model.RealName)")]
+    public class @(Model.Name)Entity : QingShan.DatabaseAccessor.EntityBase
     {
     @foreach (var item in Model.ColumnConfig)
     {
