--- a/generator/QingShan.CodeGeneratorWeb/Views/Home/Message.cshtml
+++ b/generator/QingShan.CodeGeneratorWeb/Views/Home/Message.cshtml
@@ -3,6 +3,6 @@
         <h2>生成成功 </h2>
 
         <p>@ViewBag.Message</p>
-        <a href="/codegen" class="lead">点此返回</a>
+        <a href="javascript:history.back(-1)" class="lead">点此返回</a>
     </div>
 </form>
