--- a/generator/QingShan.CodeGeneratorWeb/Views/Home/Message.cshtml
+++ b/generator/QingShan.CodeGeneratorWeb/Views/Home/Message.cshtml
@@ -1,7 +1,7 @@
 ﻿<form>
     <div class="py-5 text-center">
         <h2>生成成功 </h2>
-
+        <input hidden id="path" value="@ViewBag.Message" />
         <p>@ViewBag.Message</p>
         <a href="javascript:history.back(-1)" class="lead">点此返回</a>
     </div>
